--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: store-engine-dto-validator-ms-service
+  name: store-engine-dto-validator-service
 spec:
   selector:
     app: store-engine-dto-validator-ms
   ports:
     - protocol: TCP
-      port: 80
+      name: validator-tcp-port
+      port: 3002
       targetPort: 3002
   type: NodePort
